fixed flash alert z-index

--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -3,7 +3,7 @@
   top: 10%;
   right: 15%;
   left: 15%;
-  z-index: 1000;
+  z-index: 1500;
   border-radius: .7rem;
   border-radius: 0.7rem;
   background-color: $secondary;
